# cs-src

./: Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts.timestamp-1667802077060.mjs
.github/workflows/: deploy.yml
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/drive/: auth.rs
src/lib/: Docx.svelte  Footer.svelte  Nav.svelte  Pdf.svelte  Ppt.svelte  Pptx.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/3rdsem/coa/: +page.svelte
src/routes/3rdsem/coa/latest-slides/: +page.svelte
src/routes/3rdsem/coa/notes/: +page.svelte
src/routes/3rdsem/coa/others/: +page.svelte
src/routes/3rdsem/coa/reference-books/: +page.svelte
src/routes/3rdsem/dsa/: +page.svelte
src/routes/3rdsem/dsd/: +page.svelte
src/routes/3rdsem/dsd/Reference-Books/: +page.svelte
src/routes/3rdsem/dsd/ppts/: +page.svelte
src/routes/3rdsem/maths/: +page.svelte
src/routes/3rdsem/maths/Reference-Books/: +page.svelte
src/routes/3rdsem/maths/slides/: +page.svelte
src/routes/3rdsem/oops/: +page.svelte
