[package]
name = "cs-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.148"
serde_json = "1.0.89"
tracing = "0.1.37"
wasm-bindgen = "0.2.83"
reqwest-oauth1 = "0.2.3" #TODOOOO
url = "2.3.1"